# mpm2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  WIP.md  WIP_NOTES.txt  diskdefs  todo.txt
.github/workflows/: ci.yml  release.yml
archive/docs/: WIP_SSH_INPUT.md  ssh_input_wip.md
archive/tools/: fixmpm.cpp  mkdisk.cpp  mkspr.cpp  mpm_header.sys
asm/: BNKXIOS.SPR  bnkxios.asm  bnkxios.mac  bnkxios_port.asm  bnkxios_stub.asm  bnkxios_stub.com  bnkxios_stub.rel  coldboot.asm  ldrbios.asm  ldrbios.sym  ldrbios_hd1k.asm  ldrbios_port.asm  sftp_brs.plm  sftp_brs_header.asm  sftp_glue.asm  sftp_rsp.plm  xios_port.asm
disks/: BNKXIOS.SPR  MPM.SYS  MPM.SYS.orig  MPM_complete.SYS  MPM_mkmpm.SYS  MPM_new.SYS  MPM_nucleus.SYS  MPM_patched.SYS  MPM_with_sysdat.SYS  RESXIOS.SPR  SYSTEM.DAT.bak
docs/: announce.txt  gensys_analysis.md  mpm2_summary.md  mpm2src_index.md  mpmldr_analysis.md  self_loop_bug_analysis.md  simh_xios_analysis.md  source_build_dependencies.md
include/: banked_mem.h  console.h  disk.h  http_server.h  listen_address.h  logger.h  mpm_cpu.h  sftp_bridge.h  sftp_path.h  ssh_session.h  xios.h  z80_runner.h  z80_thread.h
mpm2_external/disk1_files/: gensys.com  mpm.sys  mpmldr.com  resbdos.spr  xdos.spr
mpm2_external/disk2_files/: lib.com  link.com  rmac.com
mpm2_external/mpm2disks/: MPMII_1.IMD  MPMII_1.img  MPMII_2.IMD  MPMII_2.img
mpm2_external/mpm_II/CUSPs_5/: dm.plm
mpm2_external/mpm_II/OEM/: mpm2srl.asm
patches/: 01_ssh_window_size.patch  02_halt_to_qkz80.patch  03_rst7_to_rst1.patch  cpmemu_qkz80_changes.patch  mpm2_all_changes.patch
scripts/: build_all.sh  build_asm.sh  build_boot.sh  build_hd1k.sh  build_sftp_rsp.sh  build_src.sh  build_system.sh  fix_extents.sh  gensys.cfg  gensys.sh  run_tests.sh  test_ssh.exp  test_ssh.sh
src/: banked_mem.cpp  console.cpp  cpm_runtime.mac  disk.cpp  http_server.cpp  listen_address.cpp  main.cpp  mpm_cpu.cpp  sftp_bridge.cpp  sftp_path.cpp  ssh_session.cpp  ssh_session_libssh.cpp  xios.cpp  z80_runner.cpp  z80_thread.cpp
src/overrides/BNKBDOS/: BNKBDOS.ASM
src/overrides/MPMLDR/: LDMONX.ASM  LDRLWR.ASM  MPMLDR.PLM
src/overrides/NUCLEUS/: BDOS30.ASM  BNKBDOS1.ASM  BNKXDOS.ASM  CLI.ASM  CONBDOS.ASM  DATAPG.ASM  DSPTCH.ASM  MEMMGR.ASM  MPM.ASM  RESBDOS1.ASM  TMPSUB.ASM
tools/: build.py  dri_patch.py  gensys.py  imd2raw.py  mkboot.cpp  mkmpm  mkmpm.cpp  mkmpm.py  mkspr.cpp  patchmpm.cpp  relocspr.cpp  ssh_test.cpp
